products/build-intelligence/deploy/k8s/overlays/prod/patch-namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: build-intelligence-prod
  labels:
    nafura.io/app: build-intelligence
    nafura.io/env: prod
