products/build-intelligence/deploy/k8s/overlays/prod/patch-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: build-intelligence
spec:
  rules:
    - host: build-intelligence.nafuralabs.com
      http:
        paths:
          - path: /api
            pathType: Prefix
            backend:
              service:
                name: build-intelligence-backend
                port:
                  number: 8086
          - path: /
            pathType: Prefix
            backend:
              service:
                name: build-intelligence-web
                port:
                  number: 80
